# android-ndk

./: build.gradle  hobichat.jks  readme.md  sama.jks  sama.txt  settings.gradle  sign_debug.jks  sign_debug.txt  sign_default.txt  sign_release.jks  sign_release.txt  signreadme.text  starchat.jks  starchat.txt
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/module/security/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CMakeLists.txt.20200508
app/src/main/cpp/base/: app_build_config.h  util_endian.h  util_log.h  util_type.h
app/src/main/cpp/ffmpeg/: CMakeLists.txt  main_ffmpeg.12.24.1422.cpp  main_ffmpeg.cpp
app/src/main/cpp/ffmpeg_cmd/: CMakeLists.txt  cmdutils.c  cmdutils.h  config.h  ffmpeg.c  main_ffmpeg.cpp
app/src/main/cpp/ffmpeg_cmd/include/libavcodec/: mathops.h
app/src/main/cpp/ffmpeg_cmd/include/libavcodec/x86/: mathops.h
app/src/main/cpp/ffmpeg_cmd/include/libavfilter/: signature_lookup.c  vf_signature.c
app/src/main/cpp/ffmpeg_cmd/include/libavformat/: network.h
app/src/main/cpp/ffmpeg_cmd/include/libavutil/x86/: asm.h  emms.h
app/src/main/cpp/net_socket/: CMakeLists.txt  bio_net_socket.cpp  bio_net_socket_20200525.cpp  bio_net_socket_20200530.cpp  bio_net_socket_20200531.cpp  bio_net_socket_old.cpp  bio_tcp_net_socket_client.c  bio_tcp_net_socket_client.h  nio_net_socket.cpp  nio_tcp_net_socket_client.c  nio_tcp_net_socket_client.h  socket_config.h
app/src/main/cpp/signature/: CMakeLists.txt  signature.cpp  signaturev1.cpp  signaturev2.cpp
app/src/main/cpp/study/: CMakeLists.txt  jni_readme.txt  study.cpp
app/src/main/java/com/lib/security/: Security.java
app/src/main/java/com/lib/security/signature/: JavaSignature.java  SignErrorActivity.java  SignExitTask.java  Signature.java  SignatureActivity.java  SignatureUtil.java
app/src/main/java/com/lib/utils/: AppUtil.java
app/src/main/java/com/module/: App.java  MainActivity.java  SharePreUtil.java
app/src/main/java/com/module/media/: FFmpeg.java  FFmpegActivity.java
app/src/main/java/com/module/net/socket/: CSocket.java  CSocketClientActivity.java  CSocketHandler.java
app/src/main/java/com/module/security/signature/: JavaSignature.java  SignErrorActivity.java  SignExitTask.java  Signature.java  SignatureActivity.java  SignatureUtil.java
app/src/main/java/com/module/study/type/: Hello.java  StudyActivity.java  Type.java
app/src/main/java/com/module/utils/: AppUtil.java
app/src/main/res/drawable/: security_sign_copy_bg.xml  security_sign_error_bg.xml  security_sign_result_bg.xml
app/src/main/res/layout/: jni_ffmpeg.xml  jni_main.xml  jni_net_socket.xml  jni_signautre.xml  jni_signautre_error.xml  jni_study.xml  security_signautre_error.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/module/security/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
